--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 plugins {
   id 'java'
+  id "io.freefair.lombok" version "8.14.1"
   id "org.jetbrains.gradle.plugin.idea-ext" version "1.1.10"
-  id "com.github.johnrengelman.shadow" version "8.1.1"
+  id "com.gradleup.shadow" version "8.3.4"
 }
 
 repositories {
@@ -12,37 +13,27 @@ repositories {
   mavenCentral() // Add Maven Central as a fallback repository
 }
 
-configurations {
-  shadowImplementation {
-    canBeResolved = true
-    canBeConsumed = false
-    extendsFrom configurations.implementation
-  }
-}
-
 dependencies {
-  // Lombok
-  compileOnly libs.lombok
-  annotationProcessor libs.lombok
-
   // Velocity API
   compileOnly libs.velocity
   annotationProcessor libs.velocity
 
-  // MariaDB
   implementation libs.mariadb
+  implementation libs.hikari
+  implementation libs.boostedyaml
 }
 
 group = 'net.lania'
-version = '1.3.0'
+version = '1.3.4'
 description = 'Whitelist plugin for managing a Minecraft whitelist using MySQL'
 
-def targetJavaVersion = 17
+def targetJavaVersion = 21
 java {
-  sourceCompatibility = JavaVersion.VERSION_17
-  targetCompatibility = JavaVersion.VERSION_17
-  toolchain {
-    languageVersion = JavaLanguageVersion.of(targetJavaVersion)
+  def javaVersion = JavaVersion.toVersion(targetJavaVersion)
+  sourceCompatibility = javaVersion
+  targetCompatibility = javaVersion
+  if (JavaVersion.current() < javaVersion) {
+    toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
   }
 }
 
@@ -71,6 +62,11 @@ def generateTemplates = tasks.register('generateTemplates', Copy) { task ->
   task.from templateSource
   task.into templateDest
   task.expand props
+}
+
+shadowJar {
+  relocate 'org.mariadb.jdbc', 'net.lania.whitelist.libs.mariadb'
+  duplicatesStrategy = DuplicatesStrategy.INCLUDE
 }
 
 sourceSets.main.java.srcDir(generateTemplates.map { it.outputs })
