--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,11 +2,13 @@
 # https://docs.gradle.org/current/userguide/platforms.html#sub::toml-dependencies-format
 
 [versions]
-lombok = "1.18.36"
 velocity = "3.4.0-SNAPSHOT"
-mariadb = "2.7.12"
+mariadb = "3.5.5"
+hikari = "6.3.0"
+boostedyaml = "1.3.7"
 
 [libraries]
-lombok = { module = "org.projectlombok:lombok", version.ref = "lombok" }
 velocity = { module = "com.velocitypowered:velocity-api", version.ref = "velocity" }
 mariadb = { module = "org.mariadb.jdbc:mariadb-java-client", version.ref = "mariadb" }
+hikari = { module = "com.zaxxer:HikariCP", version.ref = "hikari" }
+boostedyaml = { module = "dev.dejvokep:boosted-yaml", version.ref = "boostedyaml" }
